<resources>
    <string name="app_name">NHI SHOP</string>
    <string name="welcome">Welcome to NHI SHOP!</string>
    <string name="login_to_continue">Login to continue</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="create_new_account">Create New Account</string>
    <string name="add_image">Add Image</string>
    <string name="username">Username</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="messagery">Messagery</string>
    <string name="type_a_message">Type a message</string>
    <string name="log_out">Log out</string>
    <string name="description">Description</string>
    <string name="title">Title</string>
    <string name="add_article">Add article</string>
    <string name="price">Price</string>
    <string name="localisation">Localisation</string>
    <string name="date">Date</string>
    <string name="posted_by">Posted by</string>
    <string name="search">Search</string>
    <string name="title_activity_maps">MapsActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="get_address">Get address</string>
    <string name="my_announcements">My Announcements !</string>
    <string name="my_announcementsButton">My Announcements</string>
    <string name="delete">Delete</string>

</resources>