<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/_10sdp"
    android:paddingTop="@dimen/_8sdp"
    android:paddingBottom="@dimen/_8sdp"
    android:background="@drawable/background_article"
    >



    <ImageView
        android:id="@+id/imageArticle"
        android:layout_width="@dimen/_110sdp"
        android:layout_height="@dimen/_110sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:background="@drawable/background_input"
        android:backgroundTint="@color/transparent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars"
        />

    <View
        android:id="@+id/viewSupporter"
        android:layout_width="1dp"
        android:layout_height="1dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageArticle"
        app:layout_constraintStart_toEndOf="@+id/imageArticle"
        app:layout_constraintTop_toTopOf="@+id/imageArticle" />


    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginBottom="@dimen/_30sdp"
        android:maxLines="1"
        android:text="@string/title"
        android:textColor="@color/primary_text"
        android:textSize="@dimen/_20sdp"
        app:layout_constraintBottom_toTopOf="@id/viewSupporter"
        app:layout_constraintStart_toEndOf="@+id/imageArticle" />

    <TextView
        android:id="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:maxLines="1"
        android:text="@string/price"
        android:textColor="@color/primary_text"
        android:textSize="@dimen/_20sdp"
        app:layout_constraintStart_toEndOf="@+id/imageArticle"
        app:layout_constraintTop_toBottomOf="@id/title"
        />

    <TextView
        android:id="@+id/seller"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:maxLines="1"
        android:text="@string/posted_by"
        android:textColor="@color/primary_text"
        android:textSize="@dimen/_8sdp"
        app:layout_constraintStart_toEndOf="@+id/imageArticle"
        app:layout_constraintTop_toBottomOf="@+id/price"
        />

    <TextView
        android:id="@+id/localisation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:maxLines="1"
        android:text="@string/localisation"
        android:textColor="@color/primary_text"
        android:textSize="@dimen/_8sdp"
        app:layout_constraintStart_toEndOf="@+id/imageArticle"
        app:layout_constraintTop_toBottomOf="@+id/seller"
        />

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_80sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:maxLines="1"
        android:text="@string/date"
        android:textColor="@color/primary_text"
        android:textSize="@dimen/_7sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>