<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AddArticlesActivity"
    >
    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient_background"
        android:alpha="0.9"
        />


    <FrameLayout
        android:id="@+id/layoutImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_24sdp"
        tools:ignore="MissingConstraints">

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="@dimen/_250sdp"
            android:layout_height="@dimen/_150sdp"
            app:layout_constraintTop_toTopOf="parent"
            />

        <TextView
            android:id="@+id/textAddImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/add_image"
            android:textColor="@color/secondary_text"
            android:textSize="@dimen/_10ssp"/>
    </FrameLayout>





        <EditText
            android:id="@+id/titleArticle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:layout_marginLeft="@dimen/_24sdp"
            android:layout_marginRight="@dimen/_24sdp"
            android:hint="@string/title"
            android:background="@drawable/background_input"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="text"
            android:paddingStart="@dimen/_16sdp"
            android:paddingEnd="@dimen/_16sdp"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/_13ssp"
            app:layout_constraintTop_toBottomOf="@+id/layoutImage"
            app:layout_constraintBottom_toTopOf="@+id/description"
            />

    <EditText
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginLeft="@dimen/_24sdp"
        android:layout_marginRight="@dimen/_24sdp"
        android:hint="@string/description"
        android:background="@drawable/background_input"
        android:imeOptions="actionNext"
        android:importantForAutofill="no"
        android:inputType="text"
        android:paddingStart="@dimen/_16sdp"
        android:paddingEnd="@dimen/_16sdp"
        android:textColor="@color/primary_text"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintTop_toBottomOf="@+id/titleArticle"
        app:layout_constraintBottom_toTopOf="@+id/price"
        />

        <EditText
            android:id="@+id/price"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:layout_marginLeft="@dimen/_24sdp"
            android:layout_marginRight="@dimen/_24sdp"
            android:hint="@string/price"
            android:background="@drawable/background_input"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:paddingStart="@dimen/_16sdp"
            android:paddingEnd="@dimen/_16sdp"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/_13ssp"
            app:layout_constraintTop_toBottomOf="@+id/description"
            app:layout_constraintBottom_toTopOf="@+id/button_localisation"
            />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_localisation"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:layout_marginLeft="@dimen/_24sdp"
        android:layout_marginRight="@dimen/_24sdp"
        android:text="@string/get_address"
        android:textColor="@color/white"
        android:textSize="@dimen/_13ssp"
        android:textStyle="bold"
        app:cornerRadius="@dimen/_8sdp"
        android:background="@drawable/background_input"
        android:backgroundTint="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/price"
        app:layout_constraintBottom_toTopOf="@+id/layoutButton"/>

    <FrameLayout
        android:id="@+id/layoutButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16sdp"
        android:animateLayoutChanges="true"
        tools:ignore="MissingConstraints"
        app:layout_constraintTop_toBottomOf="@+id/button_localisation"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
        android:padding="@dimen/_24sdp"

        >

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonAddArticle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:text="@string/add_article"
            android:textColor="@color/white"
            android:textSize="@dimen/_13ssp"
            android:textStyle="bold"
            app:cornerRadius="@dimen/_8sdp"
            android:background="@drawable/background_input"
            android:backgroundTint="@color/white"

            />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:layout_gravity="center"
            android:visibility="invisible"/>

    </FrameLayout>



    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:background="@drawable/background_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        android:layout_marginBottom="@dimen/_10sdp"
        app:itemIconSize="30dp"
        app:itemIconTint="@drawable/item_selector"
        app:itemRippleColor="@android:color/transparent"
        app:labelVisibilityMode="unlabeled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/item_menu">
    </com.google.android.material.bottomnavigation.BottomNavigationView>



</androidx.constraintlayout.widget.ConstraintLayout>


